--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -1,4 +1,10 @@
-/* Theming */
+/*
+    nobs.css - CSS for the "Website Template - No Bootstrap" project
+
+    Author: https://github.com/jxmot
+    Repository: https://github.com/jxmot/website_template-no_bootstrap
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 :root{
