--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -181,7 +181,7 @@ ul{
 }
 
 #nav-togg:checked ~ .nav-icon .nav-icon-line {
-    background: transparent;
+    background:  var(--transparent);
 }
 
 #nav-togg:checked ~ .nav-icon .nav-icon-line::before {
