--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -46,11 +46,11 @@ body{
     font-family: "Poppins", sans-serif;
 }
 
-a{
+#nav-header a{
     text-decoration: none;
 }
 
-ul{
+#nav-menu ul{
     list-style: none;
 }
 
