--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -151,7 +151,15 @@ body{
     float: right;
 /* todo: adjust top & bottom for no logo */
     /* padding: 40px 20px; */
+    /* padding: 20px 20px; */
+}
+
+.nav-icon-nologo {
     padding: 20px 20px;
+}
+
+.nav-icon-logo {
+    padding: 40px 20px;
 }
 
 .nav-icon-line {
@@ -160,7 +168,6 @@ body{
     height: 2px;
     position: relative;
     width: 24px;
-    
 }
 
 .nav-icon-line::before, .nav-icon-line::after {
