--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -5,36 +5,7 @@
     Repository: https://github.com/jxmot/website_template-no_bootstrap
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
-
-:root{
-    --white: #f9f9f9;
-    --grey: #85888C;
-    --dark-grey: #36383F;
-    --black: #000000;
-    --yellowish: #dbcc29;
-    --transparent: rgba(0, 0, 0, 0);
-
-    /* Element Colors... */
-    --body-bg: var(--white);
-
-    --nav-header-bgcolor: var(--dark-grey);
-    --nav-header-shadow: var(--grey);
-
-    --nav-bgcolor: var(--dark-grey);
-
-    --nav-menu-hamb-hover-bgcolor: var(--grey);
-    --nav-menu-hamb-hover-color: var(--black);
-    --nav-hambicon-bgcolor: var(--yellowish);
-
-    --nav-menu-text-hover: var(--yellowish);
-    --nav-menu-text: var(--white);
-
-    --nav-logo-text: var(--white);
-
-    --footer-text: var(--white);
-    --footer-bgcolor: var(--nav-header-bgcolor);
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 /* Reset */
 *{
@@ -45,7 +16,8 @@
 
 body{
     background-color: var(--body-bg);
-    font-family: "Poppins", sans-serif;
+    color: var(--body-text);
+    font-family: "Roboto", sans-serif;
 }
 
 #nav-header a{
@@ -113,8 +85,6 @@ body{
 .nav {
     width: 100%;
     height: 100%;
-    /* position: fixed; */
-    background-color: var(--nav-bgcolor);
     overflow: hidden;
     max-height: 0;
     transition: max-height .5s ease-out;
