renamed from totop.css

--- a/public_html/assets/css/nobs-totop.css
+++ b/public_html/assets/css/nobs-totop.css
@@ -1,5 +1,5 @@
 /*
-    totop.css - CSS for the "Website Template - No Bootstrap" project,
+    nobs-totop.css - CSS for the "Website Template - No Bootstrap" project,
     this file is part of the "to top" feature.
 
     Author: https://github.com/jxmot
