--- a/public_html/assets/css/nobs-gallery.css
+++ b/public_html/assets/css/nobs-gallery.css
@@ -21,9 +21,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_commo
     justify-content: center;
     align-items: stretch;
 
-    /* position: relative; */
-    /* text-align: center; */
-    /* color: white; */
+    z-index: -1;
 }
 
 @media (min-width: 768px) {
