--- a/public_html/assets/css/nobs-gallery.css
+++ b/public_html/assets/css/nobs-gallery.css
@@ -6,39 +6,47 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-areas
 https://css-tricks.com/introduction-fr-css-unit/
 https://angrytools.com/css-grid/
 
+https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_of_Grid_Layout
 https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_common_layouts_using_CSS_Grid_Layout
 
 */
 .gallery {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 20px;
 
-    grid-auto-flow: column;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+
+    grid-auto-flow: row;
     justify-items: center;
     justify-content: center;
-    align-items: stretch;
 
     z-index: -1;
+    padding-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
     .gallery {
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        grid-column-gap: 10px;
-        grid-row-gap: 20px;
     }
 }
 
 .grid-img-cell {
-    border: 2px solid black;
-
     position: relative;
     z-index: -1;
+
+    text-align:center
+}
+
+.gallery-img {
+    border: 2px solid black;
+    max-width: 50%;
+}
+
+@media (min-width: 768px) {
+    .gallery-img {
+        max-width: 100%;
+    }
 }
 
 /* centered */
@@ -52,4 +60,10 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_commo
     font-weight: 900;
     color: red;
     background-color: black;
+}
+
+@media (min-width: 768px) {
+    .text-overimg {
+        color: yellow;
+    }
 }
