--- a/public_html/assets/css/nobs-palettes.css
+++ b/public_html/assets/css/nobs-palettes.css
@@ -1,6 +1,7 @@
 /* Palletes */
 :root{
     --white: #f9f9f9;
+    --light-grey: #c3c4c5;
     --grey: #85888C;
     --dark-grey: #36383F;
     --black: #000000;
