--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -221,9 +221,12 @@ body{
     text-align: center;
 }
 
-.article-body {
+.section-body {
     margin-left: 2rem;
     margin-right: 2rem;
+
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 /* Footer */
