added box shadow to bottom of navbar, fixes empty space

--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -24,6 +24,7 @@ body{
 /* Header */
 .nav-header {
     background-color: var(--nav-header-bgcolor);
+    box-shadow: 0 5px var(--nav-header-bgcolor);
     position: sticky;
     top: 0;
     width: 100%;
