--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -234,3 +234,24 @@ body{
     text-align: center;
     color: var(--footer-text);
 }
+
+/*
+    Embellishments....
+*/
+.home-bg {
+    z-index: -1;
+    background:url("https://picsum.photos/1920/1080") no-repeat center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size:cover;
+}
+
+.home-bg-overlay {
+    /* width: 100vw; */
+    background-color: #030404a1!important;
+}
+
+.home-body {
+    color: var(--white);
+}
