--- a/public_html/assets/css/nobs-contact.css
+++ b/public_html/assets/css/nobs-contact.css
@@ -100,3 +100,12 @@
 .contact-form-body .full-width {
   grid-column: 1 / 3;
 }
+
+.contact-form-body.textcount {
+    text-align: right;
+    font-weight: bold;
+    font-size: 0.75rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
