--- a/public_html/assets/css/nobs-alt_2.css
+++ b/public_html/assets/css/nobs-alt_2.css
@@ -22,4 +22,12 @@
     --totop-inact-bgcolor: var(--trans-red);
     --totop-act-bgcolor: var(--trans-green);
     --totop-content-color: var(--white);
+
+    --contact-form-info-bgcolor: var(--nav-header-bgcolor);
+    --contact-form-info-color: var(--white);
+    --contact-form-form-bgcolor: var(--white);
+    --contact-form-form-color:  var(--black);
+    --contact-form-form-focus:  var(--gold);
+    --contact-form-form-input-border:  var(--black);
+    --contact-form-form-button-bgcolor: var(--light-grey);
 }
