--- a/public_html/assets/css/nobs-contact.css
+++ b/public_html/assets/css/nobs-contact.css
@@ -100,11 +100,12 @@
   grid-column: 1 / 3;
 }
 
-.contact-form-body.textcount {
+.contact-form-body .textcount {
     text-align: right;
     font-weight: bold;
     font-size: 0.75rem;
     margin-left: auto;
     margin-right: auto;
+    color: var(--body-text);
 }
 
