--- a/public_html/assets/css/nobs-palettes.css
+++ b/public_html/assets/css/nobs-palettes.css
@@ -6,6 +6,8 @@
     --dark-grey: #36383F;
     --black: #000000;
     --yellowish: #dbcc29;
+    --green: green;
+    --bright-green: #27ff0f;
     --gold: gold;
     --transparent: rgba(0, 0, 0, 0);
     --trans-green: rgba(10, 120, 10, 0.7);
