incr height of footer(3rem), and repositioned text to V and H center

--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -228,11 +228,17 @@ body{
     position: fixed;
     background-color: var(--footer-bgcolor);
     width: 100vw;
+
+    text-align: center;
+    height: 3rem;
 }
 
 .footer-text {
-    text-align: center;
     color: var(--footer-text);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /*
