--- a/public_html/assets/css/nobs-contact.css
+++ b/public_html/assets/css/nobs-contact.css
@@ -61,13 +61,14 @@
 .contact-form-body p {
   margin: 0;
 }
-
 .contact-info ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-
+.contact-info li {
+    margin: 0 0 0.5rem 0;
+}
 .contact-info h3, .contact-form h3 {
   margin: 0 0 1rem 0;
 }
