changed .contact-form-wrapper use a border instead of box-shadow

--- a/public_html/assets/css/nobs-contact.css
+++ b/public_html/assets/css/nobs-contact.css
@@ -20,7 +20,7 @@
 }
 
 .contact-form-wrapper {
-  box-shadow: 0 0 5px 0 var(--light-grey);
+  border: 5px solid var(--light-grey);
 }
 
 .contact-form-wrapper > * {
