--- a/public_html/assets/css/nobs-palettes.css
+++ b/public_html/assets/css/nobs-palettes.css
@@ -8,6 +8,7 @@
     --yellowish: #dbcc29;
     --green: green;
     --bright-green: #27ff0f;
+    --bright-red: #ff0505;
     --gold: gold;
     --transparent: rgba(0, 0, 0, 0);
     --trans-green: rgba(10, 120, 10, 0.7);
