--- a/public_html/assets/css/reseter.css
+++ b/public_html/assets/css/reseter.css
@@ -3,6 +3,11 @@
         https://github.com/resetercss/reseter.css @ "main branch"
 
     Changes are marked with "jxmot".
+
+    Modified By: 
+        https://github.com/jxmot
+
+    Repository: https://github.com/jxmot/website_template-no_bootstrap
 */
 *,
 *::before,
