--- a/public_html/assets/css/nobs-alt_3.css
+++ b/public_html/assets/css/nobs-alt_3.css
@@ -1,3 +1,8 @@
+/*  nobs-alt-4.css - A color scheme, replaces nobs-default.css
+
+    Author: https://github.com/jxmot
+    Repository: https://github.com/jxmot/website_template-no_bootstrap
+*/
 :root{
     /* Element Colors... */
     --body-bg: var(--cultured);
