--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -259,8 +259,7 @@ body{
 }
 
 .home-bg-overlay {
-    /* width: 100vw; */
-    background-color: #030404a1!important;
+    background-color: var(--trans-black);
 }
 
 .home-body {
