--- a/public_html/assets/css/nobs-alt_4.css
+++ b/public_html/assets/css/nobs-alt_4.css
@@ -36,4 +36,18 @@
     --contact-form-form-focus:  var(--gold);
     --contact-form-form-input-border:  var(--black);
     --contact-form-form-button-bgcolor: var(--light-grey);
+
+    --lightbox-modal-bgcolor: var(--black);
+    --lightbox-modal-content-bgcolor:  var(--white);
+    --lightbox-modal-close: var(--white);
+    --lightbox-modal-close-hover:  var(--light-grey);
+    --lightbox-modal-close-focus: var(--lightbox-modal-close-hover);
+    --lightbox-modal-next: var(--white);
+    --lightbox-modal-prev: var(--lightbox-modal-next);
+    --lightbox-modal-next-hover-bgcolor: rgba(0, 0, 0, 0.8);
+    --lightbox-modal-prev-hover-bgcolor: var(--lightbox-modal-next-hover-bgcolor);
+    --lightbox-modal-numbertext: var(--white);
+    --lightbox-modal-caption-color: var(--white);
+    --lightbox-modal-caption-bgcolor: var(--black);
+    --lightbox-hover-shadow: var(--trans-black);
 }
