adjust z-inxdex to accommodate the lightbox

--- a/public_html/assets/css/nobs-gallery.css
+++ b/public_html/assets/css/nobs-gallery.css
@@ -13,7 +13,7 @@
     justify-items: center;
     justify-content: center;
 
-    z-index: -1;
+    /* z-index: -1; */
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
@@ -27,7 +27,7 @@
 
 .grid-img-cell {
     position: relative;
-    z-index: -1;
+    /* z-index: -1; */
     text-align:center;
 }
 
