--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -15,6 +15,8 @@ body{
 
 /* Header */
 .nav-header {
+    z-index: 1;
+
     background-color: var(--nav-header-bgcolor);
     box-shadow: 0 5px var(--nav-header-bgcolor);
     position: sticky;
