renamed all lb-demo to lb-modal-thumb-select

--- a/public_html/assets/css/nobs-lightbox.css
+++ b/public_html/assets/css/nobs-lightbox.css
@@ -129,12 +129,12 @@
     color: var(--lightbox-modal-caption-color);
 }
 
-.lb-demo {
+.lb-modal-thumb-select {
     opacity: 0.6;
 }
 
 .lb-active,
-.lb-demo:hover {
+.lb-modal-thumb-select:hover {
     opacity: 1;
 }
 
