--- a/public_html/assets/css/nobs-default.css
+++ b/public_html/assets/css/nobs-default.css
@@ -42,7 +42,8 @@
     --lightbox-modal-close: var(--white);
     --lightbox-modal-close-hover:  var(--light-grey);
     --lightbox-modal-close-focus: var(--lightbox-modal-close-hover);
-    --lightbox-modal-next: var(--white);
+    /* --lightbox-modal-next: var(--white); */
+    --lightbox-modal-next: var(--bright-green);
     --lightbox-modal-prev: var(--lightbox-modal-next);
     --lightbox-modal-next-hover-bgcolor: rgba(0, 0, 0, 0.8);
     --lightbox-modal-prev-hover-bgcolor: var(--lightbox-modal-next-hover-bgcolor);
