--- a/public_html/assets/css/nobs-alt_1.css
+++ b/public_html/assets/css/nobs-alt_1.css
@@ -28,7 +28,7 @@
     --totop-content-color: var(--white);
     --totop-border-color: var(--white);
 
-    --contact-form-info-bgcolor: var(--nav-header-bgcolor);
+    --contact-form-info-bgcolor: var(--fern-green);
     --contact-form-info-color: var(--white);
     --contact-form-form-bgcolor: var(--white);
     --contact-form-form-color:  var(--black);
