moved caption coloring to .lb-caption, removed .lb-caption-container

--- a/public_html/assets/css/nobs-lightbox.css
+++ b/public_html/assets/css/nobs-lightbox.css
@@ -93,13 +93,14 @@
     }
 }
 
-.lb-caption-container {
-    background-color: var(--lightbox-modal-caption-bgcolor);
-    color: var(--lightbox-modal-caption-color);
-}
+/* .lb-caption-container { */
+    /* background-color: var(--lightbox-modal-caption-bgcolor); */
+    /* color: var(--lightbox-modal-caption-color); */
+/* } */
 
 .lb-caption {
-    margin-top: 0;
+    background-color: var(--lightbox-modal-caption-bgcolor);
+    color: var(--lightbox-modal-caption-color);
 }
 
 /* Next & previous buttons */
