--- a/public_html/assets/css/nobs-contact.css
+++ b/public_html/assets/css/nobs-contact.css
@@ -3,8 +3,7 @@
     Originally found at:
         https://webdesign.tutsplus.com/tutorials/how-to-build-web-form-layouts-with-css-grid--cms-28776
 
-    Extensively Modified By: 
-        https://github.com/jxmot
+    Extensively Modified By: https://github.com/jxmot
 
     Repository: https://github.com/jxmot/website_template-no_bootstrap
 */
