--- a/public_html/assets/css/nobs-lightbox.css
+++ b/public_html/assets/css/nobs-lightbox.css
@@ -3,8 +3,7 @@
     Originally found at:
         https://www.w3schools.com/howto/howto_js_lightbox.asp
 
-    Extensively Modified By: 
-        https://github.com/jxmot
+    Extensively Modified By: https://github.com/jxmot
 
     Repository: https://github.com/jxmot/website_template-no_bootstrap
 */
