in .lb-prev and .lb-next changed font-size to 1.25em

--- a/public_html/assets/css/nobs-lightbox.css
+++ b/public_html/assets/css/nobs-lightbox.css
@@ -106,7 +106,7 @@
     margin-top: 2.5%;
     color: var(--lightbox-modal-next);
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.25em;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
