--- a/public_html/assets/css/nobs-alt_1.css
+++ b/public_html/assets/css/nobs-alt_1.css
@@ -41,9 +41,11 @@
     --lightbox-modal-close: var(--white);
     --lightbox-modal-close-hover:  var(--light-grey);
     --lightbox-modal-close-focus: var(--lightbox-modal-close-hover);
-    --lightbox-modal-next: var(--white);
+    --lightbox-modal-next: var(--timberwolf);
     --lightbox-modal-prev: var(--lightbox-modal-next);
-    --lightbox-modal-next-hover-bgcolor: rgba(0, 0, 0, 0.8);
+    --lightbox-modal-next-hover: var(--bright-yellow);
+    --lightbox-modal-prev-hover: var(--lightbox-modal-next-hover);
+    --lightbox-modal-next-hover-bgcolor: var(--transparent);
     --lightbox-modal-prev-hover-bgcolor: var(--lightbox-modal-next-hover-bgcolor);
     --lightbox-modal-numbertext: var(--white);
     --lightbox-modal-caption-color: var(--white);
