--- a/public_html/assets/css/splash.css
+++ b/public_html/assets/css/splash.css
@@ -1,4 +1,9 @@
+/*
+    splash.css - CSS for the "Welcome Splash"
 
+    Author: https://github.com/jxmot
+    Repository: https://github.com/jxmot/website_template-no_bootstrap
+*/
 .splash {
     background-color: black;
     text-align: center;
