--- a/public_html/assets/css/reseter.css
+++ b/public_html/assets/css/reseter.css
@@ -232,12 +232,16 @@ dialog {
     border: solid;
     color: inherit;
     display: block;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     left: 0;
     margin: auto;
     padding: 1em;
     position: absolute;
     right: 0;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
 }
 
