--- a/public_html/assets/css/cookies.css
+++ b/public_html/assets/css/cookies.css
@@ -22,6 +22,7 @@
     gap: 0px;
     /* grid-template-rows: 1fr 1fr; */
     grid-template-columns: 1fr 1fr;
+    grid-auto-rows: -webkit-min-content;
     grid-auto-rows: min-content;
 }
 
@@ -80,16 +81,12 @@
     background-size: 300% 100%;
 
     moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
 
 .cookie-con-button:hover {
     background-position: 100% 0;
     moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
 
