--- a/public_html/assets/css/nobs-gallery.css
+++ b/public_html/assets/css/nobs-gallery.css
@@ -9,7 +9,9 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
 
-    column-gap: 0.5em;
+    -moz-column-gap: 0.5em;
+
+         column-gap: 0.5em;
     row-gap: 1em;
 
     grid-auto-flow: row;
