--- a/public_html/assets/css/nobs-lightbox.css
+++ b/public_html/assets/css/nobs-lightbox.css
@@ -94,7 +94,9 @@
     font-size: 1.25em;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
-    user-select: none;
+    -moz-user-select: none;
+     -ms-user-select: none;
+         user-select: none;
     -webkit-user-select: none;
 }
 
