--- a/public_html/assets/css/splash.css
+++ b/public_html/assets/css/splash.css
@@ -59,6 +59,41 @@
     transform: translateY(-50%);
 }
 
+.splash-img-animate {
+    -webkit-animation: splash-img-blur 3s forwards;
+            animation: splash-img-blur 3s forwards;
+}
+
+@-webkit-keyframes splash-img-blur {
+  0% {
+    -webkit-filter: blur(10px);
+  }
+  25% {
+    -webkit-filter: blur(5px);
+  }
+  50% {
+    -webkit-filter: blur(2px);
+  }
+  100% {
+    -webkit-filter: blur(0px);
+  }
+}
+
+@keyframes splash-img-blur {
+  0% {
+    filter: blur(10px);
+  }
+  25% {
+   filter: blur(5px);
+  }
+  50% {
+    filter: blur(2px);
+  }
+  100% {
+    filter: blur(0px);
+  }
+}
+
 .splash-text {
     position: relative;
     top: 15%;
